--- a/js_sandbox/index.html
+++ b/js_sandbox/index.html
@@ -11,6 +11,13 @@
     />
   </head>
   <body>
+    <div class="container">
+      <button id="button1">Get Text</button>
+      <button id="button2">Get JSON</button>
+      <button id="button3">Get from API</button>
+      <div class="output"></div>
+    </div>
+
     <script src="app.js"></script>
   </body>
 </html>
